# meeting-notes-extractor

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
app/: extractor.py  main.py  openai_client.py  schemas.py  settings.py
app/extractors/: __init__.py  ai.py  base.py  deterministic.py
docs/: api.md  architecture.md  dev.md  product.md
examples/: extract-request.json
scripts/: __init__.py  smoke_ai.py
tests/: test_api.py  test_extractor.py  test_openai_client.py  test_schemas.py  test_smoke_ai.py
