[project]
name = "meeting-notes-extractor"
version = "0.1.0"
description = "FastAPI service for extracting structured data from meeting notes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "openai>=1.0.0,<2.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "mypy>=1.11.0,<2.0.0",
    "pip-tools>=7.4.0,<8.0.0",
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.11.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
files = ["app", "tests"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
